# TileDB-CAPI-Logging

./: CMakeLists.txt  LICENSE  README.md
cmake/: TileDBExtra.cmake  tdb_capi_logging-config.cmake.in
include/: capi_function_override.h  tdb_capi_logging.h
ports/tiledb-capi-logging/: portfile.cmake  vcpkg.json
ports/tiledb_capi_logging/: portfile.cmake  usage  vcpkg.json
scripts/: add-dependency.py
src/: main.cc
